force-app/main/default/objects/BatchLot__c/BatchLot__c.object-meta.xml
<CustomObject>
    <label>Batch Lot</label>
    <nameField>
        <label>Batch Lot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Lots</pluralLabel>
    <searchStatus>Inactive</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>