force-app/main/default/objects/BatchLot__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <label>LotNo</label>
    <length>80</length>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>