force-app/main/default/objects/BatchLot__c/fields/MfgDate__c.field-meta.xml
<CustomField>
    <fullName>MfgDate__c</fullName>
    <label>MfgDate</label>
    <type>Date</type>
</CustomField>