force-app/main/default/objects/BatchLot__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Batch Lots</relationshipLabel>
    <relationshipName>BatchLots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>