force-app/main/default/objects/BatchLot__c/fields/QtyOnHand__c.field-meta.xml
<CustomField>
    <fullName>QtyOnHand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty On Hand</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>