force-app/main/default/objects/BatchLot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>True</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Quarantine</fullName>
                <default>False</default>
                <label>Quarantine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>